<?xml version="1.0"?>
<package>
  <name>xtf</name>
  <version>0.0.1</version>
  <description>C++ and Python support for the XTF trajectory file format</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export></export>
</package>
